Fixed footer alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -74,6 +74,7 @@ display: line;
  * Site footer  **********************************************************
  */
 .site-footer {
+text-align: center;
 border-top: 1px solid $grey-color-dark;
 font-size: 10px;
 background-color: $grey-color-dark;
